--- a/Aidhurt/app/src/main/res/layout/activity_main.xml
+++ b/Aidhurt/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.taes.paula.aidhurt.MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="393dp"
+        android:layout_height="702dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/fondo"
+        tools:layout_editor_absoluteY="0dp" />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -13,6 +21,77 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="hello_world"
-        tools:context=".MainActivity" />
+        tools:context=".MainActivity"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="186dp"
+        android:layout_height="166dp"
+        app:srcCompat="@drawable/logo1"
+        tools:layout_editor_absoluteY="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/imageView5"
+        app:layout_constraintLeft_toRightOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.523" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="192dp" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="383dp"
+        android:layout_height="69dp"
+        app:srcCompat="@drawable/boton1"
+        tools:layout_editor_absoluteX="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.664" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline2"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="276dp"
+        tools:layout_editor_absoluteY="235dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="388dp"
+        android:layout_height="71dp"
+        app:srcCompat="@drawable/boton2"
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.573" />
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="397dp"
+        android:layout_height="67dp"
+        app:srcCompat="@drawable/boton3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.483" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline3"
+        app:layout_constraintGuide_begin="345dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="345dp"
+        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
