--- a/Aidhurt/app/src/main/res/layout/activity_main.xml
+++ b/Aidhurt/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         app:layout_constraintVertical_bias="0.44"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.995"
+        app:layout_constraintHorizontal_bias="0.964"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp" />
 
@@ -69,29 +69,29 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="358dp"
-        android:layout_height="64dp"
-        android:clickable="true"
-        android:onClick="clickContrarreloj"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/imageView105"
+        android:layout_width="567dp"
+        android:layout_height="54dp"
+        app:srcCompat="@drawable/boton_ajustes2"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.588"
-        app:srcCompat="@drawable/boton_contrarreloj" />
+        app:layout_constraintVertical_bias="0.739"
+        app:layout_constraintHorizontal_bias="0.497" />
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/boton_ajustes"
+        android:layout_width="605dp"
+        android:layout_height="51dp"
+        android:clickable="true"
+        android:onClick="clickContrarreloj"
+        app:srcCompat="@drawable/boton_contrarreloj2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.767" />
+        app:layout_constraintVertical_bias="0.59000003" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -104,14 +104,15 @@
 
     <ImageButton
         android:id="@+id/imageButton1"
-        android:layout_width="360dp"
-        android:layout_height="74dp"
+        android:layout_width="363dp"
+        android:layout_height="58dp"
         android:alpha="0"
         app:layout_constraintBottom_toTopOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.67"
+        app:layout_constraintVertical_bias="0.667"
         app:srcCompat="@drawable/boton_transparente"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
