--- a/Aidhurt/app/src/main/res/layout/activity_main.xml
+++ b/Aidhurt/app/src/main/res/layout/activity_main.xml
@@ -108,4 +108,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.0" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="click"
+        android:text="Button"
+        tools:layout_editor_absoluteX="156dp"
+        tools:layout_editor_absoluteY="443dp" />
+
 </android.support.constraint.ConstraintLayout>
